--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,19 +68,22 @@
                 android:layout_marginTop="16dp"
                 android:textStyle="bold"
                 android:gravity="center" />
+
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/txt"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_marginTop="20dp">
+
                 <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/textE"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="e.g. Ram"
                     android:inputType="textCapWords"
                     android:textColor="#363A43"
-                    android:textColorHint="#7A8089"
-                    />
+                    android:textColorHint="#7A8089" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
