--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -38,6 +38,7 @@
             android:orientation="horizontal"
             >
             <ProgressBar
+                android:id="@+id/progressBar"
                 android:layout_width="0dp"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_height="wrap_content"
@@ -47,7 +48,7 @@
                 android:minHeight="50dp"
                 android:progress="0"/>
             <TextView
-                android:id="@+id/progressBar"
+                android:id="@+id/progressTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
